--- a/scenarios/polygon-chain/extreme-packet-reorder.yaml
+++ b/scenarios/polygon-chain/extreme-packet-reorder.yaml
@@ -2,8 +2,8 @@ apiVersion: chaos.polygon.io/v1
 kind: ChaosScenario
 metadata:
   name: extreme-packet-reorder
-  description: Extreme packet reordering (90%) with high latency - tests breaking point
-  tags: [network, packet-reorder, consensus, extreme]
+  description: Extreme packet reordering (95%) with high latency (250ms) - tests breaking point with subtle degradation metrics
+  tags: [network, packet-reorder, consensus, extreme, subtle-metrics]
   author: DevTools
   version: "0.0.1"
 
@@ -21,20 +21,22 @@ spec:
 
   faults:
     - phase: extreme_reorder
-      description: Extreme packet reordering - likely to cause issues
+      description: Extreme packet reordering (95%) with 250ms latency - maximum chaos
       target: validator1_consensus
       type: network
       params:
         device: eth0
-        latency: 200        # 200ms delay (high)
-        reorder: 90         # 90% reordering (extreme)
-        reorder_correlation: 10  # 10% correlation (very random)
+        latency: 250        # 250ms delay (increased from 200ms)
+        reorder: 95         # 95% reordering (increased from 90%)
+        reorder_correlation: 5  # 5% correlation (even more random)
         target_ports: "26656,26657"
         target_proto: tcp
 
   success_criteria:
+    # ========== CRITICAL BASELINE (Must Pass) ==========
+
     - name: other_validators_continue
-      description: Other validators (not affected) continue producing blocks
+      description: CRITICAL - Other validators (not affected) continue producing blocks
       type: prometheus
       query: increase(chain_head_block{job=~"l2-el-[2-4]-.*-validator"}[1m])
       threshold: "> 0"
@@ -42,7 +44,7 @@ spec:
       critical: true
 
     - name: quorum_maintained
-      description: At least 75% (3/4) validators remain active
+      description: CRITICAL - At least 75% (3/4) validators remain active
       type: prometheus
       query: count(up{job=~"l2-cl-.*-validator"} == 1)
       threshold: ">= 3"
@@ -50,9 +52,67 @@ spec:
       critical: true
 
     - name: network_recovers_after_fault
-      description: Affected validator recovers after fault is removed
+      description: BASELINE - Affected validator recovers after fault is removed
       type: prometheus
       query: increase(cometbft_consensus_height{job="l2-cl-1-heimdall-v2-bor-validator"}[2m])
       threshold: "> 0"
       window: 2m
       critical: false
+
+    # ========== SUBTLE DEGRADATION METRICS (Detect Stress) ==========
+
+    - name: duplicate_votes_from_extreme_reorder
+      description: Duplicate votes under 250/min (extreme reordering causes massive resends)
+      type: prometheus
+      query: sum(rate(cometbft_consensus_duplicate_vote{job="l2-cl-1-heimdall-v2-bor-validator"}[2m])) * 60
+      threshold: "< 250"
+      window: 10m
+      critical: false
+
+    - name: late_votes_from_packet_chaos
+      description: Late votes under 4000/min (packets arriving out of order)
+      type: prometheus
+      query: sum(rate(cometbft_consensus_late_votes{job="l2-cl-1-heimdall-v2-bor-validator"}[2m])) * 60
+      threshold: "< 4000"
+      window: 10m
+      critical: false
+
+    - name: consensus_round_duration_chaos
+      description: Consensus rounds under 7s (packet reorder adds massive delay)
+      type: prometheus
+      query: rate(cometbft_consensus_round_duration_seconds_sum{job="l2-cl-1-heimdall-v2-bor-validator"}[2m]) / clamp_min(rate(cometbft_consensus_round_duration_seconds_count{job="l2-cl-1-heimdall-v2-bor-validator"}[2m]), 0.001)
+      threshold: "< 7.0"
+      window: 10m
+      critical: false
+
+    - name: block_interval_severely_degraded
+      description: Block intervals under 15s (extreme packet reorder slows everything)
+      type: prometheus
+      query: rate(cometbft_consensus_block_interval_seconds_sum{job=~"l2-cl-.*-heimdall-v2-bor-validator"}[2m]) / clamp_min(rate(cometbft_consensus_block_interval_seconds_count{job=~"l2-cl-.*-heimdall-v2-bor-validator"}[2m]), 0.001)
+      threshold: "< 15.0"
+      window: 10m
+      critical: false
+
+    - name: proposal_propagation_heavily_degraded
+      description: Proposals still propagate (>40% despite extreme chaos)
+      type: prometheus
+      query: sum(rate(cometbft_consensus_proposal_receive_count{job="l2-cl-1-heimdall-v2-bor-validator"}[2m])) / clamp_min(sum(rate(cometbft_consensus_proposal_create_count{job="l2-cl-1-heimdall-v2-bor-validator"}[2m])), 0.001)
+      threshold: "> 0.4"
+      window: 10m
+      critical: false
+
+  metrics:
+    # Basic metrics
+    - chain_head_block
+    - cometbft_consensus_height
+    - up
+
+    # Subtle degradation metrics
+    - cometbft_consensus_duplicate_vote
+    - cometbft_consensus_late_votes
+    - cometbft_consensus_round_duration_seconds_sum
+    - cometbft_consensus_round_duration_seconds_count
+    - cometbft_consensus_block_interval_seconds_sum
+    - cometbft_consensus_block_interval_seconds_count
+    - cometbft_consensus_proposal_create_count
+    - cometbft_consensus_proposal_receive_count
