--- a/scenarios/polygon-chain/applications/rabbitmq-failure.yaml
+++ b/scenarios/polygon-chain/applications/rabbitmq-failure.yaml
@@ -53,7 +53,7 @@ spec:
       description: Checkpoint API may be affected but should still respond
       type: prometheus
       query: increase(heimdallv2_checkpoint_api_calls_total[3m])
-      threshold: ">= 0"
+      threshold: "> 0"
       window: 3m
       critical: false
 
