--- a/scenarios/polygon-chain/network/progressive-network-degradation.yaml
+++ b/scenarios/polygon-chain/network/progressive-network-degradation.yaml
@@ -124,7 +124,7 @@ spec:
       description: Checkpoint API continues to respond
       type: prometheus
       query: increase(heimdallv2_checkpoint_api_calls_total[5m])
-      threshold: ">= 0"
+      threshold: "> 0"
       window: 12m
       critical: false
 
