--- a/scenarios/polygon-chain/network/checkpoint-delay-cascade.yaml
+++ b/scenarios/polygon-chain/network/checkpoint-delay-cascade.yaml
@@ -70,7 +70,7 @@ spec:
       description: Checkpoint API continues to respond despite delays
       type: prometheus
       query: increase(heimdallv2_checkpoint_api_calls_total[5m])
-      threshold: ">= 0"
+      threshold: "> 0"
       window: 8m
       critical: false
 
