--- a/scenarios/polygon-chain/network/latency-spike-l1-rpc.yaml
+++ b/scenarios/polygon-chain/network/latency-spike-l1-rpc.yaml
@@ -53,7 +53,7 @@ spec:
       description: Checkpoint API continues to respond
       type: prometheus
       query: increase(heimdallv2_checkpoint_api_calls_total[5m])
-      threshold: ">= 0"
+      threshold: "> 0"
       window: 10m
       critical: false
 
