--- a/scenarios/polygon-chain/network/total-dependency-isolation.yaml
+++ b/scenarios/polygon-chain/network/total-dependency-isolation.yaml
@@ -80,7 +80,7 @@ spec:
       description: System continues attempting checkpoint submissions
       type: prometheus
       query: increase(heimdallv2_checkpoint_api_calls_total[5m])
-      threshold: ">= 0"
+      threshold: "> 0"
       window: 10m
       critical: false
 
